# StalinSort

./: CMakeLists.txt  README.md  stalinsort.hpp  test.cpp
